bdr.BDR.scala.error
Erreur de compilation :
BDR:3: error: not found: value void
if (message!=void){
             ^BDR:8: error: type mismatch;
 found   : Unit
 required: Boolean
  if (message="I")
             ^